<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MassFlowSensor" Id="{d4e5f6a7-8b9c-0d1e-2f3a-4b5c6d7e8f9a}">
    <Declaration><![CDATA[TYPE ST_MassFlowSensor :
STRUCT
	Name : STRING[20];			// Sensor name
	ID : INT;					// Sensor index
	RawValue : REAL;			// Raw input converted from DINT to REAL
	ScaledValue : REAL;			// Scaled engineering units (computed by FB)
	InputMin : REAL;			// Raw input minimum (e.g., 0.0)
	InputMax : REAL;			// Raw input maximum (e.g., 8388607.0 for 24-bit)
	OutputMin : REAL;			// Scaled output minimum (e.g., 0.0)
	OutputMax : REAL;			// Scaled output maximum (e.g., 4500.0 g/min)
	RangeError : BOOL;			// TRUE if raw input outside expected range
	Status : INT;				// 0=OK, 1=Fault
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>
